# Courses_And_Trainings

./: README.md  activate.ps1  pyproject.toml
GENAI/OCU_GENAI_PROFESSIONAL_CERTIFICATION/: Interview_Preparation.md
Machine_Learning/GoogleProfessionalMachineLearningCertification/IntroductionToAIMLOnGoogleCloud/: AI_Introduction.md  ML_Demo.ipynb  ml_visualize.py
Machine_Learning/GoogleProfessionalMachineLearningCertification/MLOPS/: MLOPS_Fundamentals.md  MLOPS_Fundamentals_with_VertexAI.md  Readme.md
Machine_Learning/GoogleProfessionalMachineLearningCertification/MLPipelinesOnGoogleCloud/: AirflowVsKubeFlowVsApacheBeam.md  PipelineOrchestrationWithTFX.md  TFX_Kubeflow_VertexAI_Pipelines.md  TFXonGCPCloudAIPlatform.md
Machine_Learning/GoogleProfessionalMachineLearningCertification/ProductionMachineLearningSystems/: DesigningHigh-PerformanceMLSystems.md  ImportantConcepts.md  designingAdaptableMLSystems.md  interviewPreparation.md
